[gd_scene load_steps=3 format=3 uid="uid://206d3x7l2hf"]

[ext_resource type="Theme" uid="uid://d12h0sdtb6bla" path="res://scenes/ui/game_ui_theme.tres" id="1_mdsb2"]
[ext_resource type="Script" path="res://scenes/ui/stats_panel.gd" id="2_yhpaa"]

[node name="StatsPanel" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -39.0
offset_right = 18.0
offset_bottom = 39.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_mdsb2")
theme_type_variation = &"DarkWoodPanel"
script = ExtResource("2_yhpaa")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CurrentLocationLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="XPLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="EmptyLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="KillsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
